EchoServer/KubeFiles/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: dependency-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /echoserver(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: echo-service-v1
                port:
                  number: 5281
