EchoServer/KubeFiles/k8s-sub-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-subtending-service
  namespace: dependency-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-subtending-service
  template:
    metadata:
      labels:
        app: echo-subtending-service
    spec:
      serviceAccountName: event-creator-service
      containers:
        - name: echo-subtending-service
          image: k8s-echo-server-sharp:v1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5281
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5281
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5281
---
apiVersion: v1
kind: Service
metadata:
  name: echo-subtending-service-v1
  namespace: dependency-demo
spec:
  selector:
    app: echo-subtending-service
  ports:
    - port: 5282
      targetPort: 5281
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: dependency-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /echoserver-sub(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: echo-subtending-service-v1
                port:
                  number: 5282
